# teapot

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  sessions.example.jsonl
config/: teapot.example.toml
public/: opensearch.xml  site.webmanifest
public/css/: general.css  inputs.css  navbar.css  search.css  style.css  timeline.css  twemoji.css
public/css/profile/: base.css  card.css  photo-rail.css
public/css/themes/: auto.css  teapot_light.css
public/css/tweet/: base.css  poll.css  quote.css  thread.css
public/js/: infiniteScroll.js
sass/: index.scss
sass/tweet/: thread.scss
src/: config.rs  error.rs  main.rs  transcode.rs
src/api/: auth.rs  client.rs  endpoints.rs  http.rs  mod.rs  schema.rs  tid.rs
src/api/parser/: article.rs  card.rs  conversation.rs  edit_history.rs  entity.rs  media.rs  mod.rs  search.rs  timeline.rs  tweet.rs  user.rs
src/cache/: gif_cache.rs  mod.rs
src/routes/: debug.rs  embed.rs  helpers.rs  intent.rs  list.rs  media.rs  mod.rs  notes.rs  preferences.rs  redirect.rs  rss.rs  search.rs  status.rs  timeline.rs  unsupported.rs
src/types/: article.rs  mod.rs  prefs.rs  query.rs  session.rs  timeline.rs  tweet.rs  user.rs
src/utils/: entity_expander.rs  formatters.rs  hmac.rs  mod.rs
src/views/: embed.rs  layout.rs  mod.rs  notes.rs  preferences.rs  profile.rs  renderutils.rs  rss.rs  search.rs  timeline.rs  tweet.rs  user_list.rs
