[package]
name        = "teapot"
version     = "0.1.0"
edition     = "2024"
authors     = [ "amaanq" ]
description = "A privacy-focused Twitter/X frontend written in Rust"
license     = "AGPL-3.0"
repository  = "https://github.com/amaanq/teapot"
keywords    = [ "twitter", "privacy", "frontend", "teapot" ]
categories  = [ "web-programming::http-server" ]

[dependencies]
axum = { features = [ "macros" ], version = "0.8.8" }
axum-extra = { features = [ "cookie" ], version = "0.12.5" }
bytes = "1.11.1"
data-encoding = "2.10.0"
eyre = "0.6.12"
flate2 = "1.1.9"
form_urlencoded = "1.2.2"
http-body-util = "0.1.3"
hyper = { features = [ "http1", "client" ], version = "1.8.1" }
hyper-rustls = { default-features = false, features = [
	"ring",
	"http1",
	"tls12",
	"logging",
	"native-tokio",
], version = "0.27.7" }
hyper-util = { features = [ "client-legacy", "http1", "tokio" ], version = "0.1.20" }
maud = { features = [ "axum" ], version = "0.27.0" }
percent-encoding = "2.3.2"
regex = "1.12.3"
ring = "0.17.14"
rustls = { default-features = false, features = [
	"ring",
	"logging",
	"std",
	"tls12",
], version = "0.23.37" }
rustls-native-certs = "0.8.3"
serde = { features = [ "derive" ], version = "1.0.228" }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { features = [ "formatting", "parsing", "macros", "serde" ], version = "0.3.47" }
tokio = { features = [
	"rt-multi-thread",
	"net",
	"macros",
	"sync",
	"fs",
	"io-util",
], version = "1.49.0" }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = "1.0.3"
tower = "0.5.3"
tower-http = { features = [ "fs", "cors", "compression-gzip", "set-header" ], version = "0.6.8" }
tracing = "0.1.44"
tracing-subscriber = { features = [ "env-filter" ], version = "0.3.22" }
xitter-txid = { default-features = false, version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true

[lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

blanket_clippy_restriction_lints = "allow"
restriction                      = { level = "warn", priority = -1 }

arbitrary_source_item_ordering  = "allow"
arithmetic_side_effects         = "allow"
as_conversions                  = "allow"
default_numeric_fallback        = "allow"
else_if_without_else            = "allow"
error_impl_error                = "allow"
exhaustive_structs              = "allow"
expect_used                     = "allow"
float_arithmetic                = "allow"
implicit_return                 = "allow"
indexing_slicing                = "allow"
integer_division                = "allow"
integer_division_remainder_used = "allow"
let_underscore_must_use         = "allow"
let_underscore_untyped          = "allow"
map_err_ignore                  = "allow"
missing_docs_in_private_items   = "allow"
mod_module_files                = "allow"
multiple_crate_versions         = "allow"
needless_borrowed_reference     = "allow"
non_ascii_literal               = "allow"
pub_use                         = "allow"
question_mark_used              = "allow"
ref_patterns                    = "allow"
semicolon_outside_block         = "allow"
separated_literal_suffix        = "allow"
shadow_reuse                    = "allow"
single_call_fn                  = "allow"
single_char_lifetime_names      = "allow"
std_instead_of_alloc            = "allow"
std_instead_of_core             = "allow"
string_slice                    = "allow"
too_many_lines                  = "allow"
unimplemented                   = "allow"
unreachable                     = "allow"
unwrap_in_result                = "allow"
unwrap_used                     = "allow"
wildcard_enum_match_arm         = "allow"
